# TODO-with-GUI

./: .gitignore  CMakeLists.txt  README.md
src/: UserInterface.cpp  Window.cpp  main.cpp
src/headers/: UserInterface.hpp  Window.hpp
src/headers/interfaces/: IUserInterface.hpp  IWindow.hpp
